fixed broken CSS hover

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,7 @@
 body {
 	padding-top: 60px;
 }
+
+.new_post_button {
+	padding-bottom: 10px;
+}
